# sketch-modeling

./: .qglviewer.xml  CMakeLists.txt  DrawPrimitives.cpp  Events.cpp  Matching.cpp  main.cpp  my_qlabel.cpp  my_qlabel.h  opts.cpp  primitive.h  snapping.cpp  snapping.h  snapping.qrc  snapping.ui  view.cpp  view.h
sketch_modeling_core/: ConeFunction.h  CylinderFunction.h  LBFGS.h  SphereFunction.h
